[package]
name = "twasmi"
version = "0.3.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/twasmi"
documentation = "https://tetcoin.github.io/twasmi/"
description = "Tetsy WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]
exclude = [ "/res/*", "/tests/*", "/fuzz/*", "/benches/*" ]

[dependencies]
tetsy-wasm = "0.31"
byteorder = "1.0"
memory_units = "0.3.0"
nan-preserving-float = "0.1.0"

[dev-dependencies]
assert_matches = "1.1"
wabt = "0.3"
