[package]
name = "twasmi-validation"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/tetcoin/twasmi"
description = "Wasm code validator"

[dependencies]
tetsy-wasm = { version = "0.42.1", default-features = false }

[dev-dependencies]
assert_matches = "1.1"

[features]
default = ["std"]
std = ["tetsy-wasm/std"]
core = []
